removed horizontal scrollbar bug

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -36,7 +36,6 @@ hr
 // reponsive layout base
 .content-wrapper
 {
-    width: 100vw;
     padding-left: 1.75rem;
     padding-right: 1.75rem;
 }
